--- a/package.json
+++ b/package.json
@@ -11,24 +11,32 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "@thirdweb-dev/react": "^2.0.4",
-    "@thirdweb-dev/sdk": "^2.0.27",
+    "@thirdweb-dev/react": "^2.0.5",
+    "@thirdweb-dev/sdk": "^2.0.33",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "chakra-react-select": "^3.2.0",
     "dotenv": "^16.0.0",
-    "ethers": "^5.6.2",
+    "ethers": "^5.6.4",
     "framer-motion": "^6.2.9",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0",
     "web-vitals": "^2.1.4",
     "web3": "^1.7.3",
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +57,8 @@
     ]
   },
   "devDependencies": {
-    "dotenv-webpack": "^7.1.0"
+    "dotenv-webpack": "^7.1.0",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1"
   }
 }
